add product-module and refactor chamado service

--- a/frontend/helpdesk/src/app/components/home/home.component.html
+++ b/frontend/helpdesk/src/app/components/home/home.component.html
@@ -1,17 +1,15 @@
 <mat-card class="example-card">
     <mat-card-header>
       <mat-card-title>Help Desk</mat-card-title>
-      <mat-card-subtitle>Projeto TCC</mat-card-subtitle>
+      <mat-card-subtitle>Anavatec</mat-card-subtitle>
     </mat-card-header>
     <img mat-card-image src="assets/img/home-image.svg" alt="Image Home Help Desk">
     <mat-card-content>
         <p>
-            Olá! Seja bem vindo ao sistema Help Desk desenvolvido por: Peterson, Davi e David<br />
-            Esse é um sistema para gerenciamento de chamados simulando um simples Help Desk desenvolvido em Angular 12 e
-            Spring Boot 2. <br /> O sistema foi criado para o nosso projeto de TCC<br />
-            O projeto tem como objetivo principal abordar os conceitos de aplicações SPAs, Autenticação e Autorização com
-            Tokens JWT e muito mais. O código fonte do projeto pode ser acessado clicando no link Github no menu lateral.
-            <br /><br /> Fique a vontade para testar o sistema e deixar sua sugestão.
+            Este sitio web es operado por Anavatec. En todo el sitio, los términos “nosotros”, “nos” y “nuestro” se refieren a Anavatec. Anavatec ofrece este sitio web, incluyendo toda la información, herramientas y servicios disponibles para ti en este sitio, el usuario, está condicionado a la aceptación de todos los términos, condiciones, políticas y notificaciones aquí establecidos.<br />
+            Al visitar nuestro sitio y/o comprar algo de nosotros, paticipas en nuestro “Servicio” y aceptas los siguientes términos y condiciones (“Términos de Servicio”, “Términos”), incluídos todos los términos y condiciones adicionales y las polítias a las que se hace referencia en el presente documento y/o disponible a través de hipervínculos. Estas Condiciones de Servicio se aplican a todos los usuarios del sitio, incluyendo si limitación a usuarios que sean navegadores, proveedores, clientes, comerciantes, y/o colaboradores de contenido. <br /> Por favor, lee estos Términos de Servicio cuidadosamente antes de acceder o utilizar nuestro sitio web. Al acceder o utilizar cualquier parte del sitio, estás aceptando los Términos de Servicio. Si no estás de acuerdo con todos los términos y condiciones de este acuerdo, entonces no deberías acceder a la página web o usar cualquiera de los servicios. Si las Términos de Servicio son considerados una oferta, la aceptación está expresamente limitada a estos Términos de Servicio.<br />
+            Cualquier función nueva o herramienta que se añadan a la tienda actual, tambien estarán sujetas a los Términos de Servicio. Puedes revisar la versión actualizada de los Términos de Servicio, en cualquier momento en esta página. Nos reservamos el derecho de actualizar, cambiar o reemplazar cualquier parte de los Términos de Servicio mediante la publicación de actualizaciones y/o cambios en nuestro sitio web. Es tu responsabilidad chequear esta página periódicamente para verificar cambios. Tu uso contínuo o el acceso al sitio web después de la publicación de cualquier cambio constituye la aceptación de dichos cambios.
+            <br /><br /> No dudes en probar el sistema y dejar tu sugerencia.
             <br />
            </p>
     </mat-card-content>
