--- a/frontend/helpdesk/src/app/components/login/login.component.html
+++ b/frontend/helpdesk/src/app/components/login/login.component.html
@@ -3,7 +3,7 @@
 
         <h1>Help Desk</h1>
 
-        <img src="assets/img/login-image.svg" alt="Help Desk Image">
+        <img src="assets/img/login-image.svg" alt="Help Desk Avantec">
 
         <mat-form-field class="full-width" appearance="outline">
             <mat-label>E-mail</mat-label>
@@ -12,12 +12,12 @@
             required
             [(ngModel)]="creds.email"
             name="email"
-            matInput placeholder="exemplo@mail.com">
+            matInput placeholder="ejemplo@mail.com">
             <mat-icon matSuffix>email</mat-icon>
         </mat-form-field>
 
         <mat-form-field class="full-width" appearance="outline">
-            <mat-label>Senha</mat-label>
+            <mat-label>Contraseña</mat-label>
             <input
             [formControl]="senha"
             required
