--- a/frontend/helpdesk/src/app/components/nav/nav.component.html
+++ b/frontend/helpdesk/src/app/components/nav/nav.component.html
@@ -19,17 +19,15 @@
 
         <a mat-list-item routerLink="chamados">
           <i class="material-icons">support</i>
-          Chamados
+          Tickets
         </a>
-
+          <a mat-list-item routerLink="product">
+              <i class="material-icons">support</i>
+              Productos
+          </a>
         <a mat-list-item routerLink="graficos">
           <i class="material-icons">analytics</i>
           Graficos
-      </a>
-
-        <a mat-list-item href="https://github.com/petscaramussi/helpDesk" target="_blank">
-            <i class="material-icons">code</i>
-            GitHub
         </a>
 
         <a mat-list-item (click)="logout()">
