--- a/frontend/helpdesk/src/app/components/chamado/chamado-create/chamado-create.component.html
+++ b/frontend/helpdesk/src/app/components/chamado/chamado-create/chamado-create.component.html
@@ -1,38 +1,45 @@
 <div class="container mat-elevation-z4" >
-    <h1 class="full-width">Criando Chamado</h1>
+    <h1 class="full-width">Creando ticket</h1>
     <img class="full-width" src="assets/img/chamado-create.svg" alt="Chamado image">
 
     <form class="form">
         <mat-form-field class="full-width" appearance="outline">
-            <mat-label>Título do chamado</mat-label>
+            <mat-label>Título del ticket</mat-label>
             <input [(ngModel)]="chamado.titulo" name="titulo" [formControl]="titulo" required matInput placeholder="">
         </mat-form-field>
     </form>
 
     <div class="status-prioridade">
-        <mat-form-field appearance="outline">
-            <mat-label>Selecione um status</mat-label>
+        <mat-form-field appearance="outline" class="full-width">
+            <mat-label>Seleccione un status</mat-label>
             <mat-select [(ngModel)]="chamado.status" name="status" [formControl]="status" required>
-                <mat-option value="0">ABERTO</mat-option>
-                <mat-option value="1">EM ANDAMENTO</mat-option>
-                <mat-option value="2">ENCERRADO</mat-option>
+                <mat-option value="0">ABIERTO</mat-option>
+                <mat-option value="1">EN PROCESO</mat-option>
+                <mat-option value="2">CERRADO</mat-option>
             </mat-select>
         </mat-form-field>
 
-        <mat-form-field appearance="outline">
-            <mat-label>Selecione uma prioridade</mat-label>
+        <mat-form-field appearance="outline" class="full-width">
+            <mat-label>Seleccione una prioridad</mat-label>
             <mat-select [(ngModel)]="chamado.prioridade" name="prioridade" [formControl]="prioridade" required>
-                <mat-option value="0">BAIXA</mat-option>
-                <mat-option value="1">MÉDIA</mat-option>
+                <mat-option value="0">BAJA</mat-option>
+                <mat-option value="1">MEDIA</mat-option>
                 <mat-option value="2">ALTA</mat-option>
             </mat-select>
         </mat-form-field>
-
     </div>
-
+    <div class="product">
+        <mat-form-field appearance="outline" class="full-width">
+            <mat-label>Seleccione un producto</mat-label>
+            <mat-select [(ngModel)]="chamado.productId" name="productId" [formControl]="productId" required>
+                <mat-option *ngFor="let item of products" [value]="item.sku"> {{item.title}}
+                </mat-option>
+            </mat-select>
+        </mat-form-field>
+    </div>
     <div class="tecnico">
         <mat-form-field class="full-width" appearance="outline">
-            <mat-label>Selecione um técnico</mat-label>
+            <mat-label>Seleccione un técnico</mat-label>
             <mat-select [(ngModel)]="chamado.tecnico" name="tecnico" [formControl]="tecnico" required>
                 <mat-option *ngFor="let tec of tecnicos" value="{{tec.id}}">{{ tec.nome }}</mat-option>
             </mat-select>
@@ -41,7 +48,7 @@
 
     <div class="cliente">
         <mat-form-field class="full-width" appearance="outline">
-            <mat-label>Selecione um cliente</mat-label>
+            <mat-label>Selecione un cliente</mat-label>
             <mat-select [(ngModel)]="chamado.cliente" name="cliente" [formControl]="cliente" required>
                 <mat-option *ngFor="let cli of clientes" value="{{cli.id}}" value="0">{{ cli.nome }}</mat-option>
             </mat-select>
@@ -50,12 +57,12 @@
 
     <form class="form">
         <mat-form-field class="full-width" appearance="outline">
-            <mat-label>Deixe uma observação</mat-label>
-            <textarea [(ngModel)]="chamado.observacoes" name="observacoes" [formControl]="observacoes" required class="observacoes" matInput placeholder="Ex.: Trocar bateria de notebook..."></textarea>
+            <mat-label>Dejar una observación</mat-label>
+            <textarea [(ngModel)]="chamado.observacoes" name="observacoes" [formControl]="observacoes" required class="observacoes" matInput placeholder="Ex.: Cambiar bateria portatil de notebook..."></textarea>
         </mat-form-field>
     </form>
 
-    <button (click)="create()" [disabled]="!validaCampos()" class="full-width mat-elevation-z2" mat-raised-button color="primary">Adicionar</button>
+    <button (click)="create()" [disabled]="!validaCampos()" class="full-width mat-elevation-z2" mat-raised-button color="primary">Crear</button>
     <button routerLink="../" class="full-width mat-elevation-z2" mat-stroked-button color="warn">Cancelar</button>
 
 </div>
