--- a/frontend/helpdesk/src/app/components/chamado/chamado-update/chamado-update.component.html
+++ b/frontend/helpdesk/src/app/components/chamado/chamado-update/chamado-update.component.html
@@ -1,10 +1,10 @@
 <div class="container mat-elevation-z4" >
-    <h1 class="full-width">Atualizando Chamado</h1>
+    <h1 class="full-width">Actualizar ticket</h1>
     <img class="full-width" src="assets/img/chamado-create.svg" alt="Chamado image">
 
     <form class="form">
         <mat-form-field class="full-width" appearance="outline">
-            <mat-label>Título do chamado</mat-label>
+            <mat-label>Título del ticket</mat-label>
             <input [(ngModel)]="chamado.titulo" name="titulo" [formControl]="titulo" required matInput placeholder="">
         </mat-form-field>
     </form>
@@ -13,17 +13,17 @@
         <mat-form-field appearance="outline">
             <mat-label>{{ retornaStatus(chamado.status) }}</mat-label>
             <mat-select [(ngModel)]="chamado.status" name="status" [formControl]="status" required>
-                <mat-option value="0">ABERTO</mat-option>
-                <mat-option value="1">EM ANDAMENTO</mat-option>
-                <mat-option value="2">ENCERRADO</mat-option>
+                <mat-option value="0">ABIERTO</mat-option>
+                <mat-option value="1">EN PROCESO</mat-option>
+                <mat-option value="2">CERRADO</mat-option>
             </mat-select>
         </mat-form-field>
 
         <mat-form-field appearance="outline">
             <mat-label>{{ retornaPrioridade(chamado.prioridade) }}</mat-label>
             <mat-select [(ngModel)]="chamado.prioridade" name="prioridade" [formControl]="prioridade" required>
-                <mat-option value="0">BAIXA</mat-option>
-                <mat-option value="1">MÉDIA</mat-option>
+                <mat-option value="0">BAJA</mat-option>
+                <mat-option value="1">MEDIA</mat-option>
                 <mat-option value="2">ALTA</mat-option>
             </mat-select>
         </mat-form-field>
@@ -50,12 +50,12 @@
 
     <form class="form">
         <mat-form-field class="full-width" appearance="outline">
-            <mat-label>Deixe uma observação</mat-label>
-            <textarea [(ngModel)]="chamado.observacoes" name="observacoes" [formControl]="observacoes" required class="observacoes" matInput placeholder="Ex.: Trocar bateria de notebook..."></textarea>
+            <mat-label>Dejar una observación</mat-label>
+            <textarea [(ngModel)]="chamado.observacoes" name="observacoes" [formControl]="observacoes" required class="observacoes" matInput placeholder="Ex.: Cambiar bateria portatil de notebook..."></textarea>
         </mat-form-field>
     </form>
 
-    <button (click)="update()" [disabled]="!validaCampos()" class="full-width mat-elevation-z2" mat-raised-button color="primary">Atualizar</button>
+    <button (click)="update()" [disabled]="!validaCampos()" class="full-width mat-elevation-z2" mat-raised-button color="primary">Actualizar</button>
     <button routerLink="../../" class="full-width mat-elevation-z2" mat-stroked-button color="warn">Cancelar</button>
 
 </div>
