--- a/frontend/helpdesk/src/app/components/cliente/cliente-list/cliente-list.component.html
+++ b/frontend/helpdesk/src/app/components/cliente/cliente-list/cliente-list.component.html
@@ -1,8 +1,8 @@
 <div class="container">
 
-  <h1>Listando Clientes</h1>
+  <h1>Lista de Clientes</h1>
 
-  <button routerLink="create" mat-stroked-button color="primary">Novo cliente</button>
+  <button routerLink="create" mat-stroked-button color="primary">Nuevo Cliente</button>
 
   <mat-form-field appearance="standard">
     <mat-label>Filter</mat-label>
@@ -18,12 +18,12 @@
           </ng-container>
       
           <ng-container matColumnDef="name">
-            <th mat-header-cell *matHeaderCellDef> Nome </th>
+            <th mat-header-cell *matHeaderCellDef> NOMBRE </th>
             <td mat-cell *matCellDef="let element"> {{element.nome}} </td>
           </ng-container>
       
           <ng-container matColumnDef="weight">
-            <th mat-header-cell *matHeaderCellDef> CPF </th>
+            <th mat-header-cell *matHeaderCellDef> CODIGO DE TICKET </th>
             <td mat-cell *matCellDef="let element"> {{element.cpf}} </td>
           </ng-container>
       
@@ -33,7 +33,7 @@
           </ng-container>
 
           <ng-container matColumnDef="acoes">
-            <th mat-header-cell *matHeaderCellDef> Ações </th>
+            <th mat-header-cell *matHeaderCellDef> ACCIONES </th>
             <td mat-cell *matCellDef="let element">
                 <a routerLink="update/{{element.id}}">
                   <i class="material-icons edit">edit</i>
