--- a/frontend/helpdesk/src/app/components/nav/nav.component.css
+++ b/frontend/helpdesk/src/app/components/nav/nav.component.css
@@ -7,7 +7,8 @@
 .sidenav {
     width: 13rem;
     color: white;
-    background: linear-gradient(180deg, rgba(2,0,36,1) 0%, rgba(37,97,207,1) 0%, rgba(0,212,255,1) 100%);
+    background: #484c7f;
+    /*background: linear-gradient(180deg, rgba(2,0,36,1) 0%, rgba(37,97,207,1) 0%, rgba(0,212,255,1) 100%);*/
   }
 
 img {
