--- a/frontend/helpdesk/src/app/components/product/product-list/product-list.component.html
+++ b/frontend/helpdesk/src/app/components/product/product-list/product-list.component.html
@@ -1,62 +1,57 @@
 <div class="container">
 
-    <h1>Listando Chamados</h1>
+    <h1>Lista de Productos</h1>
+    <div style="display: flex;justify-content: space-between;gap: 50vw; margin: 20px 0;">
+        <button mat-stroked-button color="primary" (click)="OpenModal()">Nuevo Producto</button>
 
-    <button routerLink="create" mat-stroked-button color="primary">Nueva Incidencia</button>
+        <mat-form-field appearance="standard">
+            <mat-label>Filter</mat-label>
+            <input matInput (keyup)="applyFilter($event)" placeholder="Ex. ium" #input>
+        </mat-form-field>
+    </div>
 
-    <mat-form-field appearance="standard">
-        <mat-label>Filter</mat-label>
-        <input matInput (keyup)="applyFilter($event)" placeholder="Ex. ium" #input>
-    </mat-form-field>
-    
     <div class="mat-elevation-z8">
-        <table mat-table [dataSource]="dataSource">
+        <mat-table #table [dataSource]="dataSource">
 
-            <ng-container matColumnDef="id">
-                <th mat-header-cell *matHeaderCellDef> ID </th>
-                <td mat-cell *matCellDef="let element"> {{element.sku}} </td>
+            <ng-container matColumnDef="sku">
+                <mat-header-cell *matHeaderCellDef> No. </mat-header-cell>
+                <mat-cell *matCellDef="let element">
+                    {{element.sku}}
+<!--                    <input type="hidden" name="accessID" [(ngModel)]="element.sku" >-->
+                </mat-cell>
             </ng-container>
 
             <ng-container matColumnDef="titulo">
-                <th mat-header-cell *matHeaderCellDef> Titulo </th>
-                <td mat-cell *matCellDef="let element"> {{element.title}} </td>
+                <mat-header-cell *matHeaderCellDef> Titulo </mat-header-cell>
+                <mat-cell *matCellDef="let element">
+                    {{element.title}}
+                    <!--                    <input type="hidden" name="accessID" [(ngModel)]="element.sku" >-->
+                </mat-cell>
             </ng-container>
 
-            <ng-container matColumnDef="cliente">
-                <th mat-header-cell *matHeaderCellDef> Tecnico </th>
-                <td mat-cell *matCellDef="let element"> {{element.category}} </td>
+            <ng-container matColumnDef="precio">
+                <mat-header-cell *matHeaderCellDef> image </mat-header-cell>
+                <mat-cell *matCellDef="let element">
+                    <!--<img src="{{decodeImage(element.imageUrl)}}" alt="">-->
+                    <div class="wrap">
+                        <iframe [src]="decodeImage(element.imageUrl)" class="frame"></iframe>
+                    </div>
+                </mat-cell>
             </ng-container>
 
-            <ng-container matColumnDef="tecnico">
-                <th mat-header-cell *matHeaderCellDef> Cliente </th>
-                <td mat-cell *matCellDef="let element"> {{element.price}} </td>
+            <ng-container matColumnDef="categoria">
+                <mat-header-cell *matHeaderCellDef> Categoria </mat-header-cell>
+                <mat-cell *matCellDef="let element">
+                    {{element.categoryName}}
+                    <!--                    <input type="hidden" name="accessID" [(ngModel)]="element.sku" >-->
+                </mat-cell>
             </ng-container>
 
-
-            <ng-container matColumnDef="prioridade">
-                <th mat-header-cell *matHeaderCellDef> Prioridad </th>
-                <td mat-cell *matCellDef="let element"> {{element.status }} </td>
-            </ng-container>
-
-
-
-            <ng-container matColumnDef="acoes">
-                <th mat-header-cell *matHeaderCellDef> Acciones  </th>
-                <td mat-cell *matCellDef="let element">
-                    <a routerLink="update/{{ element.id }}">
-                        <i class="material-icons edit">edit</i>
-                    </a>
-                </td>
-            </ng-container>
-
-            <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
-            <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
-        </table>
-
-        <mat-paginator [pageSizeOptions]="[5, 10, 20]"
-                       showFirstLastButtons
-                       aria-label="Select page of periodic elements">
-        </mat-paginator>
+            <mat-header-row *matHeaderRowDef="displayedColumns"></mat-header-row>
+            <mat-row
+                    *matRowDef="let row; columns: displayedColumns;"
+            ></mat-row>
+        </mat-table>
     </div>
 
 </div>
