--- a/frontend/helpdesk/src/app/components/tecnico/tecnico-update/tecnico-update.component.html
+++ b/frontend/helpdesk/src/app/components/tecnico/tecnico-update/tecnico-update.component.html
@@ -1,6 +1,6 @@
 <div class="container mat-elevation-z4">
     <form class="form">
-        <h1 class="fullWidth">Atualizar Técnico</h1>
+        <h1 class="fullWidth">Actualizar Técnico</h1>
         <img class="fullWidth"  src="assets/img/tecnico-create.svg" alt="Imagem de logo">
 
         <section class="section">
@@ -10,13 +10,13 @@
         </section>
         
         <mat-form-field class="fullWidth" appearance="legacy">
-            <mat-label>Nome</mat-label>
+            <mat-label>Nombre</mat-label>
             <input [(ngModel)]="tecnico.nome" name="nome" [formControl]="nome" required matInput placeholder="Ex: Fulado de tal" maxlength="50">
             <mat-icon matSuffix>badge</mat-icon>
         </mat-form-field>
 
         <mat-form-field class="fullWidth" appearance="legacy">
-            <mat-label>CPF</mat-label>
+            <mat-label>Codigo</mat-label>
             <input [(ngModel)]="tecnico.cpf" name="cpf" [formControl]="cpf" required matInput placeholder="Ex: 000.000.000-00" mask="000.000.000-00">
             <mat-icon matSuffix>pin</mat-icon>
         </mat-form-field>
@@ -28,12 +28,12 @@
         </mat-form-field>
 
         <mat-form-field class="fullWidth" appearance="legacy">
-            <mat-label>Senha</mat-label>
+            <mat-label>Contraseña</mat-label>
             <input [(ngModel)]="tecnico.senha" name="senha" type="password" [formControl]="senha" required matInput placeholder="Ex: 1234">
             <mat-icon matSuffix>password</mat-icon>
         </mat-form-field>
 
-        <button (click)="update()" [disabled]="!validaCampos()" class="fullWidth" mat-flat-button color="primary">Atualizar</button>
+        <button (click)="update()" [disabled]="!validaCampos()" class="fullWidth" mat-flat-button color="primary">Actualizar</button>
         <button routerLink="../ ../" class="fullWidth" mat-stroked-button color="warn">Cancelar</button>
 
     </form>
